--- a/debug.ipynb
+++ b/debug.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "30ae76ac",
    "metadata": {},
    "outputs": [],
@@ -16,39 +16,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "4e0eda94",
    "metadata": {},
    "outputs": [],
    "source": [
-    "unet = Unet( num_in  = [1,2,4,2,1], query_dim = [20, 10, 5, 10, 20], context_dim_1 = 3, context_dim_2 = 3, dropout = 0.)\n",
-    "Xattention = CrossAttention(query_dim = 20, context_dim=3, heads=8, dim_head=64, dropout=0.)"
+    "unet = Unet( num = [200, 100, 50, 100, 200], dim = [1, 2, 4, 2, 1], context_dim_1 = 3, context_dim_2 = 3, dropout = 0.)\n",
+    "Xattention = CrossAttention(query_dim = 1, out_dim =2, context_dim=3, heads=8, dim_head=64, dropout=0.)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "bd0d2b01",
    "metadata": {},
    "outputs": [],
    "source": [
-    "input = torch.randn([100, 1, 20])\n",
-    "time_emb = torch.randn([100,1])"
+    "input = torch.randn([100, 1, 200]) #[B, Dim, N]\n",
+    "time_emb = torch.randn([100,1])\n",
+    "context = torch.rand([100, 1, 3])#[B, num, context_dim]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "931c0a2d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "Xatten_output = Xattention(input)"
+    "Xatten_output = Xattention(input,context)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "aa9b1ec1",
    "metadata": {},
    "outputs": [],
@@ -58,61 +59,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "79c639c1",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(Unet_output.shape)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "id": "03951b34",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import Airfoil_DDPM_tools"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "61e974a5",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "batch_CST = torch.randn([100,20])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "ec45564a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "batch_pointcloud = Airfoil_DDPM_tools.batch_CST2pointcloud(batch_CST, 100)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "id": "a057f875",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "列表尺寸: 100 x 200x 2\n"
+      "torch.Size([100, 1, 200])\n"
      ]
     }
    ],
    "source": [
-    "# 完整尺寸信息\n",
-    "print(f\"列表尺寸: {len(batch_pointcloud)} x {len(batch_pointcloud[0])}x {len(batch_pointcloud[0][0])}\" if batch_pointcloud else \"空列表\")"
+    "print(Unet_output.shape)"
    ]
   }
  ],
