--- a/data_CSV2PC.ipynb
+++ b/data_CSV2PC.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "c57ba5f7",
    "metadata": {},
    "outputs": [],
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "3e108a6d",
    "metadata": {},
    "outputs": [],
@@ -28,25 +28,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "fcd3d0bf",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(199115, 26)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(data.shape)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "04c5586b",
    "metadata": {},
    "outputs": [],
@@ -57,25 +49,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "a0bda734",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(199115, 20)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(CST.shape)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "ac134728",
    "metadata": {},
    "outputs": [],
@@ -85,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "45d7a22e",
    "metadata": {},
    "outputs": [],
@@ -99,43 +83,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "2e778c72",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "199115 200 2\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(len(arrays),len(arrays[0]),len(arrays[0][0]))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "9dde1c7b",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(199115, 200, 2)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(point_cloud.shape)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "eb8fb605",
    "metadata": {},
    "outputs": [],
@@ -151,31 +119,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "99bb5ce6",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(199115, 200, 2) (199115, 6)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(shuffled_pointcloud.shape, shuffled_ACC.shape)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "4ee5df56",
    "metadata": {},
    "outputs": [],
    "source": [
     "# 保存到文件\n",
-    "save_path = os.path.join(\"data\",\"train_data_pointcloud.npz\")\n",
+    "save_path = os.path.join(\"../data\",\"train_data_pointcloud.npz\")\n",
     "np.savez(save_path, \n",
     "         pointcloud=point_cloud, \n",
     "         ACC=ACC_Numpy)"
@@ -183,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "94e457b5",
    "metadata": {},
    "outputs": [],
@@ -192,14 +152,6 @@
     "loaded_pointcloud = loaded_data['pointcloud']  # 形状 [B, N, 3]\n",
     "loaded_ACC = loaded_data['ACC']                # 形状 [B, 6]"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "34769431",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
