--- a/data_CSV2PC.ipynb
+++ b/data_CSV2PC.ipynb
@@ -74,7 +74,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "arrays = [np.random.rand(200, 2) for _ in range(CST.shape[0])]\n",
+    "arrays = [np.random.beta(a=0.5, b=0.5, size=(200, 2)) for _ in range(CST.shape[0])]\n",
     "for i,cst in enumerate(CST):\n",
     "    arrays[i] = Airfoil_DDPM_tools.CST2pointcloud(cst, 100)\n",
     "\n",
